--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       scoreText: document.getElementById('scoreText'),
       statRight: document.getElementById('statRight'),
       statWrong: document.getElementById('statWrong'),
-      statTime: document.getElementBy('statTime'),
+      statTime: document.getElementById(('statTime'),
       btnReview: document.getElementById('btnReview'),
       btnAgain: document.getElementById('btnAgain'),
       reviewBox: document.getElementById('reviewBox'),
